# sca_scripts

./: README.md  pyproject.toml
src/SCA_scripts/: main.py
src/SCA_scripts/financial_analysis/: balance_sheet.py  p_and_l.py
src/SCA_scripts/reading/: excel_reader.py
src/SCA_scripts/writing/: word_writer.py
